metadata/objects/GRAX_Data_Record_Id__c.object
<CustomObject>
    <description>This object contains the specific Salesforce record id which will be backed up/archived as part of the GRAX Scheduled process. These records are automatically deleted at the conclusion of a successful GRAX Scheduled Process.</description>
    <fields>
        <fullName>Can_Delete_GRAX_Record__c</fullName>
        <formula>GRAX_Data_Record__r.GRAX_Schedule_Process__c = null || 
(
  NOT(ISPICKVAL(GRAX_Data_Record__r.GRAX_Schedule_Process__r.type__c, &apos;Hierarchy&apos;)) ||
  NOT(GRAX_Data_Record__r.GRAX_Schedule_Process__r.Progressive__c)
) &amp;&amp;
(
  (
    NOT(GRAX_Data_Record__r.GRAX_Schedule_Process__r.Is_Running__c) &amp;&amp;
    DATEVALUE(CreatedDate) &lt; TODAY() - 15
  ) ||
  (
    GRAX_Data_Record__r.GRAX_Schedule_Process__r.Execution_Unique_Key__c != Execution_Unique_Key__c
  ) ||
  (
    NOT(ISPICKVAL(Status__c, &apos;Delete Error&apos;)) &amp;&amp;
    GRAX_Data_Record__r.GRAX_Schedule_Process__r.Can_Delete_GRAX_Records__c &amp;&amp; 
    (
      ISPICKVAL(GRAX_Data_Record__r.Status__c, &apos;Sent Successful&apos;) ||
      (
        ISPICKVAL(GRAX_Data_Record__r.Status__c, &apos;Not Sent&apos;) &amp;&amp;
        NOT(GRAX_Data_Record__r.GRAX_Schedule_Process__r.Is_Running__c)
      )
    ) &amp;&amp;
    (
       ISBLANK(GRAX_Data_Record__r.GRAX_Archive_Process__c) || 
       GRAX_Data_Record__r.GRAX_Archive_Process__r.Can_Delete_GRAX_Record__c
    )
  )
)</formula>
        <label>Can Delete GRAX Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Execution_Unique_Key__c</fullName>
        <label>Execution Unique Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Data_Record__c</fullName>
        <label>GRAX Data Record</label>
        <referenceTo>GRAX_Data_Record__c</referenceTo>
        <relationshipLabel>GRAX Data Record Ids</relationshipLabel>
        <relationshipName>GRAX_Data_Record_Ids</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Processed_Child_Index__c</fullName>
        <description>Processed_Child_Index</description>
        <label>Processed Child Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Id__c</fullName>
        <description>SFDC_Id</description>
        <label>SFDC Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To be Deleted</fullName>
                </value>
                <value>
                    <fullName>Deleted with Master Parent</fullName>
                </value>
                <value>
                    <fullName>Successfully Deleted</fullName>
                </value>
                <value>
                    <fullName>Delete Error</fullName>
                </value>
                <value>
                    <fullName>Sent to GRAX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Attempts_to_Delete__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of Attempts to Delete</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GRAX Data Record Id</label>
    <nameField>
        <displayFormat>GRAX-RecId-{000000000}</displayFormat>
        <label>GRAX Data Record Id Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRAX Data Record Ids</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>